clusters/vollminlab-cluster/flux-system/allow-tofu-source-controller-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-tofu-source-controller
  namespace: flux-system
  labels:
    app: flux
    env: production
    category: core
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tofu
